--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<html lang="pt-br">
-    <head>
+<html><head><base href="https://bar-esperanca.com/">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bar Esperança - Reservas Online em Tempo Real</title>
@@ -430,7 +429,7 @@
 
   <script>
     const firebaseConfig = {
-      apiKey: "",
+      apiKey: "AIzaSyACMK8-XbLmdRAEVUx3prQO7HxFRjaeHP4",
       authDomain: "baresperanca-cca31.firebaseapp.com",
       projectId: "baresperanca-cca31",
       storageBucket: "baresperanca-cca31.appspot.com",
